--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,27 @@
   color: #20c997 !important;
 }
 
+.nk-tb-head .nk-tb-col {
+  color: #444!important;
+}
+.nk-tb-item:not(.nk-tb-head):hover, .nk-tb-item:not(.nk-tb-head).seleted {
+  background: #fff!important;
+  transform: scale(1.01);
+  -webkit-box-shadow: 0 4px 6px 0 rgb(85 85 85 / 8%), 0 1px 20px 0 rgb(0 0 0 / 7%), 0px 1px 11px 0px rgb(0 0 0 / 7%);
+  -moz-box-shadow: 0 4px 6px 0 rgba(85, 85, 85, 0.08), 0 1px 20px 0 rgba(0, 0, 0, 0.07), 0px 1px 11px 0px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 4px 6px 0 rgb(85 85 85 / 8%), 0 1px 20px 0 rgb(0 0 0 / 7%), 0px 1px 11px 0px rgb(0 0 0 / 7%);
+}
+
+
+.nk-tb-item {
+  transition: transform 200ms ease;
+}
+
+.page-item.active .page-link {
+  background-color: #1ee0ac!important;
+  border-color:#1ee0ac!important;
+
+}
 .App {
   text-align: center;
 }
