--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,9 @@ color: #0fcf9b;
   height: 40vmin;
   pointer-events: none;
 }
+.nk-sidebar{
+  background-color: #f0f2fb!important;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
