--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,9 @@ color: #0fcf9b;
 .nk-sidebar{
   background-color: #f0f2fb!important;
 }
+.nk-tb-list {  
+  color: #0d1116!important;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
