new pages UI and images

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
   -webkit-box-shadow: 0 4px 6px 0 rgb(85 85 85 / 8%), 0 1px 20px 0 rgb(0 0 0 / 7%), 0px 1px 11px 0px rgb(0 0 0 / 7%);
   -moz-box-shadow: 0 4px 6px 0 rgba(85, 85, 85, 0.08), 0 1px 20px 0 rgba(0, 0, 0, 0.07), 0px 1px 11px 0px rgba(0, 0, 0, 0.07);
   box-shadow: 0 4px 6px 0 rgb(85 85 85 / 8%), 0 1px 20px 0 rgb(0 0 0 / 7%), 0px 1px 11px 0px rgb(0 0 0 / 7%);
+  z-index: 0;
 }
 .dark-mode .zoom_on_table:hover,
 .dark-mode .nk-tb-item:not(.nk-tb-head):hover, .nk-tb-item:not(.nk-tb-head).seleted {
@@ -56,6 +57,7 @@
   -webkit-box-shadow: 0 4px 6px 0 rgb(85 85 85 / 8%), 0 1px 20px 0 rgb(0 0 0 / 7%), 0px 1px 11px 0px rgb(0 0 0 / 7%);
   -moz-box-shadow: 0 4px 6px 0 rgba(85, 85, 85, 0.08), 0 1px 20px 0 rgba(0, 0, 0, 0.07), 0px 1px 11px 0px rgba(0, 0, 0, 0.07);
   box-shadow: 0 4px 6px 0 rgb(85 85 85 / 8%), 0 1px 20px 0 rgb(0 0 0 / 7%), 0px 1px 11px 0px rgb(0 0 0 / 7%);
+  z-index: 0;
 }
 
 .dark-mode .hover_on_card:hover {
@@ -69,7 +71,9 @@
   transition: background 200ms ease;
   
 }
-
+.carousel-indicators [data-bs-target] {
+  background-color: #198754!important;
+}
 .nk-tb-item {
   transition: transform 200ms ease;
 }
@@ -96,40 +100,12 @@
 .overline-title-alt {
   letter-spacing: 1pt!important;
 }
-/* .carousel.carousel-fade .carousel-item {
-  display: block;
-  opacity: 0;
-  transition: opacity ease-out .7s;
-} */
 
-.carousel-fade .carousel-item {
-  opacity: 0;
-  transition-duration: .5s;
-  transition-property: opacity;
- }
- 
- .carousel-fade  .carousel-item.active,
- .carousel-fade  .carousel-item-next.carousel-item-left,
- .carousel-fade  .carousel-item-prev.carousel-item-right {
-  opacity: 1 !important;
- }
- 
- .carousel-fade .active.carousel-item-left,
- .carousel-fade  .active.carousel-item-right {
-  opacity: 0;
- }
- 
- .carousel-fade  .carousel-item-next,
- .carousel-fade .carousel-item-prev,
- .carousel-fade .carousel-item.active,
- .carousel-fade .active.carousel-item-left,
- .carousel-fade  .active.carousel-item-prev {
-  transform: translateX(0);
-  transform: translate3d(0, 0, 0);
- }
- 
- 
- 
+.news_img_div {
+  height: 8.75rem;
+  width: 100%;
+}
+
 .App {
   text-align: center;
 }
