--- a/src/components/ss.css
+++ b/src/components/ss.css
@@ -1,3 +1,10 @@
-.amit{
-    background-color: aquamarine;
+.auth_style {
+    background-color: #fff;
+    width: 40px!important;
+    height: 40px!important;
+    border: 1px solid #ccc;
+    outline:none
+}
+.auth_style :focus-visible{
+    border: 1px solid #ccc!important;
 }
