--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   display: flex;
   position: fixed;
   bottom: 0;
+  height: 60px;
   left: 0;
   right: 0;
   padding: 0.8rem 0;
@@ -19,7 +20,7 @@
   flex-grow: 1;
   justify-content: center;
   text-align: center;
-  font-size: 1.3 em;
+  font-size: 1.4 em;
   color: #222;
 }
 .bottom-nav-link {
@@ -670,4 +671,10 @@ body {
 
 .goog-te-banner-frame {
   display: none !important;
+}
+
+@media only screen and (min-width: 360px) and (max-width:576px) {
+	.nk-footer {
+    margin-bottom: 50px;
+  }
 }
